Use aria for http(s) links in makepkg

--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -1,3 +1,9 @@
+DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
+          'ftp::/usr/bin/curl -qgfC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %u'
+          'http::/usr/bin/aria2c -c -o %o %u'
+          'https::/usr/bin/aria2c -c -o %o %u'
+          'rsync::/usr/bin/rsync --no-motd -z %u %o'
+          'scp::/usr/bin/scp -C %u %o')
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 # Aggressive: -fipa-pta -O3 -flto -fdevirtualize-at-ltrans -Wl,-Bsymbolic-non-weak-functions -fno-semantic-interposition
