--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -1,7 +1,7 @@
 DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
           'ftp::/usr/bin/curl -qgfC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %u'
-          'http::/usr/bin/aria2c -c -o %o %u'
-          'https::/usr/bin/aria2c -c -o %o %u'
+          'http::/usr/bin/aria2c -c --max-connection-per-server=10 --min-split-size=10M -s 10 -o %o %u'
+          'https::/usr/bin/aria2c -c --max-connection-per-server=10 --min-split-size=10M -s 10 -o %o %u'
           'rsync::/usr/bin/rsync --no-motd -z %u %o'
           'scp::/usr/bin/scp -C %u %o')
 # -march (or -mcpu) builds exclusively for an architecture
@@ -14,7 +14,8 @@ DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
 CFLAGS="-march=native -O3 -pipe -fno-plt -fexceptions -fno-semantic-interposition -fdevirtualize-at-ltrans -fipa-pta -fomit-frame-pointer --param max-completely-peel-times=30"
 CXXFLAGS="$CFLAGS"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now,-z,pack-relative-relocs,--hash-style=gnu,-Bsymbolic-functions"
-BUILDENV=(!distcc color ccache check !sign)
+BUILDENV=(!distcc color !ccache check !sign)
 COMPRESSGZ=(pigz -c -f -n)
 COMPRESSXZ=(xz -c -z --thread=0 -)
 COMPRESSZST=(zstd -c -z -q -T0 -13 --long -)
+source ~/.config/pacman/makepkg.conf.local
