Resolve merge conflicts in hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,6 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
 
-# unscale XWayland
 xwayland {
   force_zero_scaling = true
 }
@@ -15,7 +13,6 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = /usr/lib/policykit-1-pantheon/io.elementary.desktop.agent-polkit
 exec-once = gammastep-indicator
-exec-once = nm-applet
 exec-once = [workspace special silent; size 75% 20%;move 12.5% 40] kitty --single-instance
 bind=CTRL,return,togglespecialworkspace
 
@@ -44,8 +41,8 @@ input {
 }
 
 general {
-    gaps_in = 2
-    gaps_out = 5
+    gaps_in = 5
+    gaps_out = 20
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -57,10 +54,11 @@ decoration {
     rounding = 10
 
     blur {
-        enabled = false
+        enabled = true
+        size = 3
+        passes = 1
     }
 
-    # false massively increases battery usage. See powertop.
     drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
