Enable direct scanout in Hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,6 +21,11 @@ env = XCURSOR_SIZE,24
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    no_direct_scanout = false
+}
+
+render {
+    # direct_scanout = true
 }
 
 input {
