--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -170,6 +170,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bind=$mainMod,F,fullscreen
+
 # brightness keybinds
 bind = , XF86MonBrightnessUp,     exec, brightnessctl set 10%+
 bind = , XF86MonBrightnessDown,   exec, brightnessctl set 10%-
