--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,5 @@
 monitor=,preferred,auto,auto
 
-
-xwayland {
-  force_zero_scaling = true
-}
-
 exec-once = /usr/lib/kdeconnectd
 exec-once = kdeconnect-indicator
 exec-once = nwg-drawer -r -nofs
@@ -13,10 +8,15 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = /usr/lib/policykit-1-pantheon/io.elementary.desktop.agent-polkit
 exec-once = gammastep-indicator
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP HYPRLAND_INSTANCE_SIGNATURE QT_QPA_PLATFORMTHEME DISPLAY
 exec-once = [workspace special silent; size 75% 20%;move 12.5% 40] kitty --single-instance
 bind=CTRL,return,togglespecialworkspace
 
 env = XCURSOR_SIZE,24
+
+xwayland {
+  force_zero_scaling = true
+}
 
 misc {
     disable_hyprland_logo = true
@@ -43,7 +43,15 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+#    scroll_factor = 0.5
 }
+
+device {
+    name = logitech-m720-triathlon-1
+    sensitivity = 0.3
+    accel_profile = flat
+}
+
 
 general {
     gaps_in = 5
@@ -75,16 +83,8 @@ animations {
 }
 
 dwindle {
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true
-}
-
-master {
-
-}
-
-gestures {
-    workspace_swipe = false
+    preserve_split = false
+    force_split = 2  # Always split to the right/bottom
 }
 
 device {
@@ -137,6 +137,9 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = ALT, Tab, focuscurrentorlast
+#bind = ALT, Tab, cyclenext, bind = ALT, Tab, bringactivetotop, 
+#bind = ALT SHIFT, Tab, cyclenext, prev
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -149,6 +152,9 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+bind = $mainMod, period, workspace, e+1
+bind = $mainMod, comma, workspace,e-1
+bind = $mainMod, tab, workspace,e-1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -182,6 +188,6 @@ bind = , XF86AudioLowerVolume,    exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%
 bind = , XF86AudioMute,           exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 #bind = , Print, exec, flameshot gui
-bind = , Print, exec, QT_SCREEN_SCALE_FACTORS="0.75" flameshot gui
+bind = , Print, exec, QT_SCREEN_SCALE_FACTORS="0.75" XDG_CURRENT_DESKTOP=sway flameshot gui
 
 source=~/.config/hypr/hyprland.conf.local
