--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/jerome/Pictures/Wallpapers/james webb 2.png
-wallpaper = ,/home/jerome/Pictures/Wallpapers/james webb 2.png
+preload = /home/jerome/Pictures/Wallpapers/end_4.png
+wallpaper = ,/home/jerome/Pictures/Wallpapers/end_4.png
 
