Fix kdeconnect path

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 monitor=,preferred,auto,auto
 
-exec-once = /usr/lib/kdeconnectd
+exec-once = kdeconnectd
 exec-once = kdeconnect-indicator
 exec-once = nwg-drawer -r -nofs
 exec-once = swaync
