Update config for recent Hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,11 +21,11 @@ xwayland {
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
-    no_direct_scanout = false
+    #no_direct_scanout = false
 }
 
 render {
-    # direct_scanout = true
+    direct_scanout = true
 }
 
 input {
