--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,6 +40,7 @@ input {
 
     touchpad {
         natural_scroll = true
+        disable_while_typing = false # Annoying with games
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
