DPMS monitor after 900s

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ exec-once = hyprpaper
 exec-once = /usr/lib/policykit-1-pantheon/io.elementary.desktop.agent-polkit
 exec-once = gammastep-indicator
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP HYPRLAND_INSTANCE_SIGNATURE QT_QPA_PLATFORMTHEME DISPLAY
+exec-once = swayidle -w timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 exec-once = [workspace special silent; size 75% 20%;move 12.5% 40] kitty --single-instance
 bind=CTRL,return,togglespecialworkspace
 
