Try fixing cache cleanup breaking paru

--- a/.config/user-tmpfiles.d/cache.conf
+++ b/.config/user-tmpfiles.d/cache.conf
@@ -1,3 +1,9 @@
 # Delete directories in .cache whenever they have not been used in 30 days.
 # Doesn't work if .cache is a symlink, even when using a trailing slash.
 e %C - - - ABCM:30d -
+
+# Try to exclude paru's clone since this is causing this sort of error:
+# error: command failed: /home/jerome/.cache/paru/clone/pycharm-professional: git reset --hard -q HEAD:
+# error: unable to read sha1 file of ltedit-professional.desktop (1a6698f1ce9a8c494271f931ea2066a36295b257)
+# A better solution is probably to change `e` above to something else
+x %C/paru/clone - - - - -
