Update Hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,10 @@ bind=CTRL,return,togglespecialworkspace
 
 env = XCURSOR_SIZE,24
 
+ecosystem {
+    no_update_news = true
+}
+
 xwayland {
   force_zero_scaling = true
 }
@@ -119,6 +123,9 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,class:^(cachyos-hello)$
 windowrulev2 = float,class:^(zenity)$
 windowrulev2 = float,class:^()$,title:^(Steam - Self Updater)$
+windowrulev2 = noinitialfocus,class:^jetbrains-(?!toolbox),floating:1
+# windowrulev2 = move 30% 30%,class:^jetbrains-(?!toolbox),title:^(?!win.*),floating:1
+# windowrulev2 = size 40% 40%,class:^jetbrains-(?!toolbox),title:^(?!win.*),floating:1
 
 $mainMod = SUPER
 
@@ -188,7 +195,6 @@ bind = , XF86AudioRaiseVolume,    exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%
 bind = , XF86AudioLowerVolume,    exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = , XF86AudioMute,           exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
-#bind = , Print, exec, flameshot gui
-bind = , Print, exec, QT_SCREEN_SCALE_FACTORS="0.75" XDG_CURRENT_DESKTOP=sway flameshot gui
+bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
 source=~/.config/hypr/hyprland.conf.local
