--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -11,6 +11,7 @@ DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
 #CPPFLAGS=""
 # -fno-semantic-interposition and -Bsymbolic-functions have similar roles in different scenarios. They prevent function calls inside shared libraries from being indirected. This breaks LD_PRELOAD from overriding intra-so function calls. -Bsymbolic-non-weak-function is a safer version that uses the default behaviour for weak functions. It doesn't seem to be available in GNU ld though.  https://lobste.rs/s/3pgd4h/fno_semantic_interposition#c_2dmfkr
 # --param max-completely-peel-times=30: The default has been 16 for way too long. Increase slightly.
+        # -flto-partition=none
 CFLAGS="-march=native -O3 -pipe -fno-plt -fexceptions -fno-semantic-interposition -fdevirtualize-at-ltrans -fipa-pta -fomit-frame-pointer --param max-completely-peel-times=30"
 CXXFLAGS="$CFLAGS"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now,-z,pack-relative-relocs,--hash-style=gnu,-Bsymbolic-functions"
