--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,6 +42,7 @@ input {
     numlock_by_default = true
 
     follow_mouse = 1
+    mouse_refocus = false
 
     touchpad {
         natural_scroll = true
@@ -50,6 +51,8 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 #    scroll_factor = 0.5
+
+
 }
 
 device {
@@ -99,18 +102,19 @@ device {
 }
 
 gestures {
-    workspace_swipe = true
-    workspace_swipe_invert = true
-    workspace_swipe_fingers = 3
-    workspace_swipe_distance = 1300
-    workspace_swipe_cancel_ratio = 0.5
-    workspace_swipe_min_speed_to_force = 20
+    gesture = 3, horizontal, workspace
+#    workspace_swipe = true
+#    workspace_swipe_invert = true
+#    workspace_swipe_fingers = 3
+#    workspace_swipe_distance = 1300
+#    workspace_swipe_cancel_ratio = 0.5
+#    workspace_swipe_min_speed_to_force = 20
     workspace_swipe_create_new = false
 }
 
 # From: https://github.com/CachyOS/cachyos-hyprland-settings/blob/master/etc/skel/.config/hypr/hyprland.conf
 # Float Necessary Windows
-windowrule=float,Rofi
+#windowrule=float,Rofi
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
@@ -123,9 +127,16 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,class:^(cachyos-hello)$
 windowrulev2 = float,class:^(zenity)$
 windowrulev2 = float,class:^()$,title:^(Steam - Self Updater)$
-windowrulev2 = noinitialfocus,class:^jetbrains-(?!toolbox),floating:1
+#windowrulev2 = noinitialfocus,class:^jetbrains-(?!toolbox),floating:1
 # windowrulev2 = move 30% 30%,class:^jetbrains-(?!toolbox),title:^(?!win.*),floating:1
 # windowrulev2 = size 40% 40%,class:^jetbrains-(?!toolbox),title:^(?!win.*),floating:1
+
+windowrulev2 = noinitialfocus, class:jetbrains-toolbox, floating:0
+windowrulev2 = noinitialfocus, class:(jetbrains-)(.*), floating:0
+windowrulev2 = noinitialfocus, class:(jetbrains-)(.*), title:^$, initialTitle:^$, floating:0
+windowrulev2 = center, class:(jetbrains-)(.*), initialTitle:(.+), floating:0
+windowrulev2 = center, class:(jetbrains-)(.*), title:^$, initialTitle:^$, floating:0
+windowrulev2 = noinitialfocus, class:(jetbrains-) (.*), title:^win(.*), initialTitle:win.*, floating:0
 
 $mainMod = SUPER
 
