--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
-preload = /home/jerome/Pictures/Wallpapers/end_4.png
-wallpaper = ,/home/jerome/Pictures/Wallpapers/end_4.png
-
+wallpaper {
+    monitor = DP-3
+    path = /home/jerome/Pictures/Wallpapers/end_4.png
+    fit_mode = cover
+}
