--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -15,6 +15,7 @@ DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
 CFLAGS="-march=native -O3 -pipe -fno-plt -fexceptions -fno-semantic-interposition -fdevirtualize-at-ltrans -fipa-pta -fomit-frame-pointer --param max-completely-peel-times=30"
 CXXFLAGS="$CFLAGS"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now,-z,pack-relative-relocs,--hash-style=gnu,-Bsymbolic-functions"
+RUSTFLAGS="-C opt-level=3 -C target-cpu=native -C link-arg=-z -C link-arg=pack-relative-relocs"
 BUILDENV=(!distcc color !ccache check !sign)
 COMPRESSGZ=(pigz -c -f -n)
 COMPRESSXZ=(xz -c -z --thread=0 -)
